Bug 1642364 - Add a temporary solution for modal dialog centered alignment r=emilio
Spec: https://html.spec.whatwg.org/multipage/#centered-alignment

The spec is opaque about the centered alignment mode and we couldn't
come up a satisfied solution by using the current version of the
spec. There will be discussion in CSSWG to talk about better solutions.
In the meantime, we are adding this patch as a temporary solution with
basic centered alignment support to allow us enabling the feature
in Nightly for more testing.

Differential Revision: https://phabricator.services.mozilla.com/D77678

UltraBlame original commit: c3799309b95c400ddfdb1f24f630d4c5dcba6fc6

--- a/layout/style/res/html.css
+++ b/layout/style/res/html.css
@@ -828,6 +828,7 @@ dialog {
   padding: 1em;
   background: white;
   width: -moz-fit-content;
+  height: -moz-fit-content;
 }
 
 dialog:not([open]) {
@@ -836,6 +837,13 @@ dialog:not([open]) {
 
 dialog:-moz-modal-dialog {
   -moz-top-layer: top !important;
+  
+  position: fixed;
+  max-height: 100vh;
+  max-width: 100vw;
+  top: 50%;
+  transform: translateY(-50%);
+  overflow: auto;
 }
 
 
